# rioc

./: LICENSE  NOTICE  README.md
sdk/dotnet/: HPKV.RIOC.sln  README.md
sdk/dotnet/HPKV.RIOC.BasicTest/src/: HPKV.RIOC.BasicTest.csproj  Program.cs
sdk/dotnet/HPKV.RIOC.Benchmark/src/: HPKV.RIOC.Benchmark.csproj  Program.cs
sdk/dotnet/HPKV.RIOC/src/: HPKV.RIOC.csproj  HPKV.RIOC.targets  RiocBatch.cs  RiocClient.cs  RiocConfig.cs  RiocException.cs
sdk/dotnet/HPKV.RIOC/src/Native/: RiocNative.cs
sdk/dotnet/HPKV.RIOC/tests/: HPKV.RIOC.Tests.csproj  RiocClientTests.cs
sdk/node/hpkv-rioc/: .gitignore  README.md  binding.gyp  package-lock.json  package.json  tsconfig.json
sdk/node/hpkv-rioc/examples/: atomic.ts  basic.ts  batch.ts  mtls.ts  range-query.ts
sdk/node/hpkv-rioc/examples/utils/: args.ts
sdk/node/hpkv-rioc/scripts/: prepare.js
sdk/node/hpkv-rioc/src/: batch.ts  client.ts  config.ts  errors.ts  index.ts
sdk/node/hpkv-rioc/src/native/: binding.cc  binding.h
sdk/node/hpkv-rioc/test/: client.test.ts  tsconfig.json
sdk/python/hpkv-rioc/: .gitignore  README.md  requirements-dev.txt  requirements.txt  setup.py
sdk/python/hpkv-rioc/examples/: atomic.py  basic.py  batch.py  mtls.py  range-query.py
sdk/python/hpkv-rioc/scripts/: copy_native_libs.sh  setup_dev.sh
sdk/python/hpkv-rioc/src/hpkv_rioc/: __init__.py  client.py  config.py  exceptions.py  native.py
sdk/python/hpkv-rioc/tests/: conftest.py  test_batch.py  test_client.py  test_tls.py
src/: CMakeLists.txt  README.md  exported_symbols.txt  rioc.h  rioc_bench.c  rioc_client.c  rioc_platform.h  rioc_platform_unix.c  rioc_platform_windows.c  rioc_test.c  rioc_tls.c  rioc_tls.h
